--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,17 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+plugins {
+  id "org.sonarqube" version "3.3"
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "ignassimkunas_ReminderCalendar"
+    property "sonar.organization", "ignassimkunas"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
 
 allprojects {
     repositories {
